--- a/VB/Dashboard_UnderlyingDataWin/Dashboard_UnderlyingDataWin.vbproj
+++ b/VB/Dashboard_UnderlyingDataWin/Dashboard_UnderlyingDataWin.vbproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -41,40 +41,40 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DevExpress.CodeParser.v19.1" />
-    <Reference Include="DevExpress.TreeMap.v19.1.Core" />
-    <Reference Include="DevExpress.XtraTreeMap.v19.1" />
-    <Reference Include="DevExpress.Dashboard.v19.1.Core" />
-    <Reference Include="DevExpress.Dashboard.v19.1.Win" />
-    <Reference Include="DevExpress.Data.v19.1" />
-    <Reference Include="DevExpress.DataAccess.v19.1" />
-    <Reference Include="DevExpress.DataAccess.v19.1.UI" />
-    <Reference Include="DevExpress.Office.v19.1.Core" />
-    <Reference Include="DevExpress.PivotGrid.v19.1.Core" />
-    <Reference Include="DevExpress.Pdf.v19.1.Core" />
-    <Reference Include="DevExpress.RichEdit.v19.1.Export" />
-    <Reference Include="DevExpress.Printing.v19.1.Core" />
-    <Reference Include="DevExpress.RichEdit.v19.1.Core" />
-    <Reference Include="DevExpress.Sparkline.v19.1.Core" />
-    <Reference Include="DevExpress.Utils.v19.1" />
-    <Reference Include="DevExpress.Utils.v19.1.UI" />
-    <Reference Include="DevExpress.Xpo.v19.1" />
-    <Reference Include="DevExpress.XtraBars.v19.1" />
-    <Reference Include="DevExpress.Charts.v19.1.Core" />
-    <Reference Include="DevExpress.XtraCharts.v19.1" />
-    <Reference Include="DevExpress.XtraCharts.v19.1.UI" />
-    <Reference Include="DevExpress.XtraCharts.v19.1.Wizard" />
-    <Reference Include="DevExpress.XtraEditors.v19.1" />
-    <Reference Include="DevExpress.XtraGauges.v19.1.Core" />
-    <Reference Include="DevExpress.XtraGauges.v19.1.Win" />
-    <Reference Include="DevExpress.XtraGrid.v19.1" />
-    <Reference Include="DevExpress.XtraLayout.v19.1" />
-    <Reference Include="DevExpress.XtraMap.v19.1" />
-    <Reference Include="DevExpress.XtraPivotGrid.v19.1" />
-    <Reference Include="DevExpress.XtraPrinting.v19.1" />
-    <Reference Include="DevExpress.Images.v19.1" />
-    <Reference Include="DevExpress.XtraRichEdit.v19.1" />
-    <Reference Include="DevExpress.XtraTreeList.v19.1" />
+    <Reference Include="DevExpress.CodeParser.v19.2" />
+    <Reference Include="DevExpress.TreeMap.v19.2.Core" />
+    <Reference Include="DevExpress.XtraTreeMap.v19.2" />
+    <Reference Include="DevExpress.Dashboard.v19.2.Core" />
+    <Reference Include="DevExpress.Dashboard.v19.2.Win" />
+    <Reference Include="DevExpress.Data.v19.2" />
+    <Reference Include="DevExpress.DataAccess.v19.2" />
+    <Reference Include="DevExpress.DataAccess.v19.2.UI" />
+    <Reference Include="DevExpress.Office.v19.2.Core" />
+    <Reference Include="DevExpress.PivotGrid.v19.2.Core" />
+    <Reference Include="DevExpress.Pdf.v19.2.Core" />
+    <Reference Include="DevExpress.RichEdit.v19.2.Export" />
+    <Reference Include="DevExpress.Printing.v19.2.Core" />
+    <Reference Include="DevExpress.RichEdit.v19.2.Core" />
+    <Reference Include="DevExpress.Sparkline.v19.2.Core" />
+    <Reference Include="DevExpress.Utils.v19.2" />
+    <Reference Include="DevExpress.Utils.v19.2.UI" />
+    <Reference Include="DevExpress.Xpo.v19.2" />
+    <Reference Include="DevExpress.XtraBars.v19.2" />
+    <Reference Include="DevExpress.Charts.v19.2.Core" />
+    <Reference Include="DevExpress.XtraCharts.v19.2" />
+    <Reference Include="DevExpress.XtraCharts.v19.2.UI" />
+    <Reference Include="DevExpress.XtraCharts.v19.2.Wizard" />
+    <Reference Include="DevExpress.XtraEditors.v19.2" />
+    <Reference Include="DevExpress.XtraGauges.v19.2.Core" />
+    <Reference Include="DevExpress.XtraGauges.v19.2.Win" />
+    <Reference Include="DevExpress.XtraGrid.v19.2" />
+    <Reference Include="DevExpress.XtraLayout.v19.2" />
+    <Reference Include="DevExpress.XtraMap.v19.2" />
+    <Reference Include="DevExpress.XtraPivotGrid.v19.2" />
+    <Reference Include="DevExpress.XtraPrinting.v19.2" />
+    <Reference Include="DevExpress.Images.v19.2" />
+    <Reference Include="DevExpress.XtraRichEdit.v19.2" />
+    <Reference Include="DevExpress.XtraTreeList.v19.2" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
